# sandfish

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HISTORY.md  LICENSE  PYPI_SETUP.md  README.md  docker-compose.yml  pyproject.toml
aegisflow/: __init__.py
aegisflow/memory/: __init__.py  ompa_adapter.py
aegisflow/orchestration/: __init__.py  swarm.py
aegisflow/sandbox/: __init__.py  environment.py
agents/: base_agent.py
benchmarks/: KPI_REPORT.md  harness.py  run_all.py  run_benchmarks.py
core/: orchestrator.py
docs/: INSTALL.md  PERFORMANCE_AUDIT.md  PORTFOLIO_SUMMARY.md  WHITEPAPER.md
memory/: ompa_adapter.py
sandfish/: __init__.py  cli.py
sandfish/agents/: __init__.py  base_agent.py
sandfish/api/: __init__.py  main.py
sandfish/core/: __init__.py  orchestrator.py
sandfish/memory/: __init__.py  ompa_adapter.py
sandfish/security/: __init__.py  audit.py
security/: audit.py
tests/: test_agents.py  test_core.py  test_edge_cases.py  test_orchestrator.py
