[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandfish"
version = "0.1.0"
description = "Clean-room multi-agent swarm intelligence system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jarv", email = "jarv@micap.ai"}
]
keywords = ["multi-agent", "swarm", "simulation", "ai", "omp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "ompa>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sandfish = "sandfish.cli:main"

[project.urls]
Homepage = "https://github.com/micap/sandfish"
Repository = "https://github.com/micap/sandfish"
Documentation = "https://docs.sandfish.ai"

[tool.hatch.build.targets.wheel]
packages = ["sandfish"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
